--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ video recording of the meeting -->
                   <li>Peter</li>
                 </ul>
               </section>
+            </section>
         <hr>
         <section id="notes">
         <header>
@@ -151,15 +152,15 @@ video recording of the meeting -->
           <form action="#" method="post">
             <fieldset>
               <p>
-                <label for="feedbackText">What is your favorite animal?:</label>
+                <label >What is your favorite animal?:</label>
                 <textarea id="feedbackText" name="feedbackText" rows="4" cols="50" placeholder="Enter your favorite animal here..."></textarea>
               </p>
               <p>
-                <label for="subscribe">Subscribe to updates:</label>
+                <label >Subscribe to updates:</label>
                 <input type="checkbox" id="subscribe" name="subscribe">
               </p>
               <p>
-                <label for="rate">Rate the meeting out of 10:</label>
+                <label>Rate the meeting out of 10:</label>
                 <input type="radio" id="rate1" name="rate" value="1">
                 <label for="rate1">1</label>
                 <input type="radio" id="rate2" name="rate" value="2">
@@ -170,11 +171,11 @@ video recording of the meeting -->
                 <label for="rate3">Really? You'd go higher than 3?</label>
               </p>
               <p>
-                <label for="meetingDate">Meeting Date:</label>
+                <label >Meeting Date:</label>
                 <input type="date" id="meetingDate" name="meetingDate">
               </p>
               <p>
-                <label for="topics">Select a fruit:</label>
+                <label >Select a fruit:</label>
                 <input list="topicOptions" id="topics" name="topics">
                 <datalist id="topicOptions">
                   <option value="Apple">
@@ -184,16 +185,16 @@ video recording of the meeting -->
                 </datalist>
               </p>
               <p>
-                <label for="major">Major:</label>
+                <label >Major:</label>
                 <select id="major" name="major">
                   <option value="engineering">Computer Engineering</option>
-                  <option value="jobless">Computer Scie ce</option>
+                  <option value="jobless">Computer Science</option>
                   <option value="worse than jobless">Math - Computer Science</option>
                 </select>
               </p>
               
               <p>
-                <label for="username">Name:</label>
+                <label >Name:</label>
                 <input type="text" id="username" name="username" placeholder="Your name">
               </p>
               <p>
