--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Hackathon Brainstorm</title>
     <link rel="icon" href="favicon.ico">
-
+    <link rel="stylesheet" href="styles.css">
     </head>
   <body>
     <header>
