fix CSS element clashes

--- a/index.html
+++ b/index.html
@@ -7,18 +7,18 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <header class="flex-container">
-      <h1>Meeting Notes and HTML Elements Demo</h1>
-      <nav>
-        <ul>
-          <li><a href="#overview">Overview</a></li>
-          <li><a href="#notes">Notes</a></li>
-          <li><a href="#multimedia">Multimedia</a></li>
-          <li><a href="#form-section">Favorite Animal?</a></li>
-        </ul>
-      </nav>
-    </header>
+    <header>
+      <h1 style="font-size: 1.5rem; margin-bottom: 0.5rem;">Meeting Notes and HTML Elements Demo</h1>
 
+    </header>
+    <nav>
+      <ul class="nav-list">
+        <li><a href="#overview">Overview</a></li>
+        <li><a href="#notes">Notes</a></li>
+        <li><a href="#multimedia">Multimedia</a></li>
+        <li><a href="#form-section">Favorite Animal?</a></li>
+      </ul>
+    </nav>
     <hr>
 
     <main>
